# lansenger-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  README.zhHans.md  README.zhHant.md  README.zhHantHK.md  pyproject.toml
.trae/rules/: quality.md  release.md
docs/: CLI_README.md  CROSS-SDK-CHANGE-SPEC.md
src/lansenger_cli/: main.py  utils.py
src/lansenger_cli/commands/: bot_command.py  calendar.py  callback.py  chat.py  config.py  department.py  group.py  health.py  media.py  message.py  oauth.py  personal_app.py  staff.py  streaming.py  todo.py
tests/: test_cli_config.py  test_cli_health.py  test_logging.py
